objects/Acv_integration__mdt.object
<CustomObject>
    <description>This metadata contains information about all callouts from salesforce to ACV. Informations contains are endpoint address,name ,write-back fields,Integration method used</description>
    <fields>
        <fullName>Bulk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identified whether this is a bulk integration</description>
        <label>Bulk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndPoint_URL__c</fullName>
        <label>EndPoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Integration_Method__c</fullName>
        <label>Integration Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PATCH</fullName>
                    <default>true</default>
                    <label>PATCH</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OAuth__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true this integration uses oauth credentials (username &amp; password to generate session_id)</description>
        <label>OAuth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL_Parameters__c</fullName>
        <description>Endpoint url parameters with comma seperated  url parameter and api name in the object. For e.g :auction_id = Auction_Number_Case__c</description>
        <label>URL Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Back_Field__c</fullName>
        <label>Write Back Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outbound Integration</label>
    <pluralLabel>Outbound Integrations</pluralLabel>
</CustomObject>